--- a/Part2/index.html
+++ b/Part2/index.html
@@ -9,10 +9,14 @@
 <body>
   <header><h1>Poker Cards</h1></header>
     <main>
-        <section><span>A</span><span>♦</span><span>A</span></section>
-        <section><span>A</span><span>♣</span><span>A</span></section>
-        <section><span>A</span><span>♥</span><span>A</span></section>
-        <section><span>A</span><span>♠</span><span>A</span></section>
+        <section id="diamonds"><span>A</span><span>♦</span><span>A</span></section>
+        <section id="clubs"><span>A</span><span>♣</span><span>A</span></section>
+        <section id="hearts"><span>A</span><span>♥</span><span>A</span></section>
+        <section id="spades"><span>A</span><span>♠</span><span>A</span></section>
     </main>
+    <button id="btn" onclick="setCard()">Edit Card</button>
+    <input id="id" type="text" placeholder="ID">
+    <input id="color" type="text" placeholder="Color">
+    <script src= script.js></script>
 </body>
 </html>
